change header link

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		}
 	],
 	"scripts": {
-		"build": "npx @11ty/eleventy"
+		"pages": "npx @11ty/eleventy --pathprefix=me"
 	},
 	"devDependencies": {
 		"@11ty/eleventy": "^2.0.1",
